--- a/src/App.css
+++ b/src/App.css
@@ -223,7 +223,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('src/assets/download (3).jpeg');
+  background-image: url('/download (3).jpeg');
   background-size: cover;
   background-position: center;
   filter: blur(02px);
