--- a/src/FinalPage.css
+++ b/src/FinalPage.css
@@ -23,7 +23,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('src/assets/bgimg2.jpg');
+  background-image: url('/bgimg2.jpg');
   background-size: cover;
   background-position: center;
   filter: blur(0.4px);
